implement new session endpoint
